--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: "Roboto", sans-serif;
+    margin: 0;
+  }
+  
+  main {
+    font-family: "Roboto", sans-serif;
+  }
+  
+  
+  router-outlet {
+    flex: 1;
+  }
+  
