--- a/src/app/admin/gestion-territorios/crear-territorio/crear-territorio.component.html
+++ b/src/app/admin/gestion-territorios/crear-territorio/crear-territorio.component.html
@@ -13,35 +13,35 @@
             placeholder="Ingresar nombre">
         </div>
 
-        <label for="cod_territorio">Código de Territorio</label>
+        <label for="cod_territorio" style="margin-top: 15px;">Código de Territorio</label>
         <input type="number" id="cod_territorio" formControlName="cod_territorio" class="form-control">
 
-        <!-- Selección Múltiple de Regiones -->
-        <div class="form-group">
-          <label for="region_id">Región</label>
-          <select id="region_id" class="form-control" multiple
-            (change)="onRegionChange($event)">
-            <option *ngFor="let region of regiones" [value]="region.id">{{ region.nombre }}</option>
-          </select>
-        </div>
+        <!-- Selección Múltiple de Regiones con Angular Material -->
+        <label for="region" style="margin-top: 15px;">Región</label>
+        <mat-form-field appearance="outline" style="margin-top: 5px;">
+          <mat-label>Seleccionar</mat-label>
+          <mat-select formControlName="region_id" multiple (selectionChange)="onRegionChange($event)">
+            <mat-option *ngFor="let region of regiones" [value]="region.id">{{ region.nombre }}</mat-option>
+          </mat-select>
+        </mat-form-field>        
 
-        <!-- Selección Múltiple de Provincias -->
-        <div class="form-group">
-          <label for="provincia_id">Provincia</label>
-          <select id="provincia_id" class="form-control" multiple
-            (change)="onProvinciaChange($event)">
-            <option *ngFor="let provincia of provincias" [value]="provincia.id">{{ provincia.nombre }}</option>
-          </select>
-        </div>
+        <!-- Selección Múltiple de Provincias con Angular Material -->
+        <label for="region">Provincia</label>
+        <mat-form-field appearance="outline">
+          <mat-label>Seleccionar</mat-label>
+          <mat-select formControlName="provincia_id" multiple (selectionChange)="onProvinciaChange($event)">
+            <mat-option *ngFor="let provincia of provincias" [value]="provincia.id">{{ provincia.nombre }}</mat-option>
+          </mat-select>
+        </mat-form-field>
 
-        <!-- Selección Múltiple de Comunas -->
-        <div class="form-group">
-          <label for="comuna_id">Comuna</label>
-          <select id="comuna_id" class="form-control" multiple
-            (change)="onComunaChange($event)">
-            <option *ngFor="let comuna of comunas" [value]="comuna.id">{{ comuna.nombre }}</option>
-          </select>
-        </div>
+        <!-- Selección Múltiple de Comunas con Angular Material -->
+        <label for="region">Comuna</label>
+        <mat-form-field appearance="outline">
+          <mat-label>Seleccionar</mat-label>
+          <mat-select formControlName="comuna_id" multiple (selectionChange)="onComunaChange($event)">
+            <mat-option *ngFor="let comuna of comunas" [value]="comuna.id">{{ comuna.nombre }}</mat-option>
+          </mat-select>
+        </mat-form-field>
 
         <!-- Plazas -->
         <div class="form-group">
@@ -50,14 +50,14 @@
         </div>
 
         <!-- Línea -->
-        <div class="form-group">
-          <label for="linea" class="form-label">Línea de intervención</label>
-          <select id="linea" class="form-control" formControlName="linea">
-            <option value="">Seleccionar</option>
-            <option value="1">Línea 1</option>
-            <option value="2">Línea 2</option>
-          </select>
-        </div>
+        <mat-form-field appearance="outline" style="margin-top: 35px;">
+          <mat-label>Asignar Planes de Intervención</mat-label>
+          <mat-select formControlName="linea">
+            <mat-option value="">Seleccionar</mat-option>
+            <mat-option value="1">Línea 1</mat-option>
+            <mat-option value="2">Línea 2</mat-option>
+          </mat-select>
+        </mat-form-field>
 
         <!-- Cuota 1 
         <div class="form-group">
