--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -10,6 +10,15 @@
           <li><a routerLink="/admin/gestion-territorios/listar">Ver todos los territorios</a></li>
         </ul>
       </li>
+
+      <!-- Planes de intervencion -->
+      <li (click)="toggleMenu('plandeintervencion')" [class.open]="menuState['plandeintervencion']">
+        <i class="fas fa-newspaper"></i>Gestor de planes de intervención
+        <ul *ngIf="menuState['plandeintervencion']">
+          <li><a routerLink="/admin/gestion-plandeintervencion/crear">Agregar nuevo plan de intervención</a></li>
+          <li><a routerLink="/admin/gestion-plandeintervencion/listar">Ver todos los planes de intervención</a></li>
+        </ul>
+      </li>
          
       <!-- Opciones adicionales para móvil -->
       <li class="mobile-only"><a routerLink="admin/miperfil"><i class="fas fa-user"></i> Mi Perfil</a></li>
