--- a/src/app/admin/gestion-territorios/listar-territorios/listar-territorios.component.html
+++ b/src/app/admin/gestion-territorios/listar-territorios/listar-territorios.component.html
@@ -7,8 +7,7 @@
   
     <select [(ngModel)]="selectedLinea" (change)="filtrarTerritorios()">
       <option value="">Todas las líneas</option>
-      <option value="1">Línea 1</option>
-      <option value="2">Línea 2</option>
+      <option *ngFor="let linea of lineas" [value]="linea.id">{{ linea.nombre }}</option>
     </select>
   
     <button (click)="filtrarTerritorios()"><span>Buscar</span> <i class="icono-buscar">➕</i></button>
@@ -18,7 +17,7 @@
     <div class="territorio-header">
       <div class="mispan" style="display: grid;">
         <span class="titulo">{{ territorio.nombre_territorio }}</span>
-        <span>Línea de intervención - <strong>{{ territorio.linea == '1' ? 'Línea 1' : 'Línea 2' }}</strong></span>
+        <span>Línea de intervención - <strong>{{ territorio.linea ? territorio.linea : 'Sin asignar' }}</strong></span>
       </div>
       <div class="menu">
         <button (mouseenter)="toggleMenu(territorio.id)" class="btn-menu">⚙</button>
@@ -35,7 +34,7 @@
       <p><strong>Región:</strong> {{ territorio.region_nombres }}</p>
       <p><strong>Provincia:</strong> {{ territorio.provincia_nombres }}</p>
       <p><strong>Comuna(s):</strong> {{ territorio.comuna_nombres }}</p>
-      <p><strong>Línea de intervención:</strong> {{ territorio.linea == '1' ? 'Línea 1' : 'Línea 2' }}</p>
+      <p><strong>Línea de intervención:</strong>{{ territorio.linea ? territorio.linea : 'Sin asignar' }}</p>
       <p><strong>Plazas:</strong> {{ territorio.plazas }} </p>
     </div>
   </div>
