--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -37,10 +37,19 @@
           <li><a routerLink="/admin/gestion-institucionesejecutoras/listar">Ver todas las institucionesejecutoras</a></li>
         </ul>
       </li>
+
+      <!-- Usuarios instituciones -->
+      <li (click)="toggleMenu('usuariosinstituciones')" [class.open]="menuState['usuariosinstituciones']">
+        <i class="fas fa-newspaper"></i>Usuarios instituciones
+        <ul *ngIf="menuState['usuariosinstituciones']">
+          <li><a routerLink="/admin/gestion-usuariosinstituciones/crear">Agregar nueva usuario</a></li>
+          <li><a routerLink="/admin/gestion-usuariosinstituciones/listar">Ver todos los usuarios</a></li>
+        </ul>
+      </li>
          
       <!-- Opciones adicionales para móvil -->
       <li class="mobile-only"><a routerLink="admin/miperfil"><i class="fas fa-user"></i> Mi Perfil</a></li>
-      <li class="mobile-only"><a routerLink="/admin"><i class="fas fa-user"></i> Dashboard Admin</a></li>
+      <li class="mobile-only"><a routerLink="/admin"><i class="fas fa-user"></i> Dashboard User</a></li>
       <li class="mobile-only"><a routerLink="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
     </ul>
   </nav>
