--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,11 +2,11 @@
   <div class="navbar-brand">
     <a href="/admin">
       <img src="assets/images/caminos.jpg" alt="Logo" class="navbar-logo">
-      <span class="navbar-title">Dashboard User</span>
+      <!--<span class="navbar-title">Dashboard User</span>-->
     </a>
   </div>
   <div class="navbar-right desktop-only">
-    <a href="admin/miperfil">Mi Perfil</a>
+    <!--<a href="admin/miperfil">Mi Perfil</a>-->
     <button (click)="logout()">Cerrar Sesión</button>
   </div>
   <div class="navbar-menu mobile-only">
